CHANGES
=======

* Removed the 2.6 python version (no compatibility) and print the traceback (just for testing purposes in the meantime)
* Fix travis file (no coverage run needed)
* Keep testing code coverage (coverage run)
* Remove -y (pip install doesn't need the -y for install just for uninstall)
* Testing Codecov
* Fix the setup.cfg and README includes the build status for master
* ChangeLog (also need to check if this make sense)
* Forcing the installation of requirements.txt (need to check this, because should be self-contained the plugin)
* Testing travis.yml without virtualenv
* Using PBR to make all the configurations for the setuptools buidling Changes in travis.yml to solve and test
* Stability changes
* First travis conf test
* Test Changes
* First files to start
* Initial commit