@@ -1,10 +1,0 @@
-# -*- coding: utf-8 -*-
-
-from innuendo.core.interface import TerminalInterface
-
-def main():
-    ui = TerminalInterface()
-    ui.run()
-
-if __name__ == '__main__':
-    main()
