@@ -38,4 +38,4 @@ data_files =
 
 [entry_points]
 console_scripts =
-    innuendo-agent = innuendo:main
+    innuendo-agent = innuendo.__main__:main
